--- a/nltk.ipynb
+++ b/nltk.ipynb
@@ -297,6 +297,268 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# stemming"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from nltk.stem.snowball import SnowballStemmer,PorterStemmer\n",
+    "from nltk.stem.lancaster import LancasterStemmer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'jump'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sentence=\"I Love Jumping.My brother loves to jump.\"\n",
+    "ps=PorterStemmer()\n",
+    "ps.stem('Jumping')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'i love jumping.my brother loves to jump.'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ps.stem(sentence)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "corpus=['Indian cricket team will win the world cup says virat.',\n",
+    "       'he will win lok sabha elect says indian pm.',\n",
+    "       'the nobel laureate won the hearts of the people.',\n",
+    "       'Raazi is an exciting indian thriller based on a true story']\n",
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "cv=CountVectorizer()\n",
+    "vectorised_corpus=cv.fit_transform(corpus)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'scipy.sparse.csr.csr_matrix'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(vectorised_corpus))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  (0, 8)\t1\n",
+      "  (0, 2)\t1\n",
+      "  (0, 21)\t1\n",
+      "  (0, 26)\t1\n",
+      "  (0, 27)\t1\n",
+      "  (0, 22)\t1\n",
+      "  (0, 29)\t1\n",
+      "  (0, 3)\t1\n",
+      "  (0, 19)\t1\n",
+      "  (0, 25)\t1\n",
+      "  (1, 8)\t1\n",
+      "  (1, 26)\t1\n",
+      "  (1, 27)\t1\n",
+      "  (1, 19)\t1\n",
+      "  (1, 6)\t1\n",
+      "  (1, 11)\t1\n",
+      "  (1, 18)\t1\n",
+      "  (1, 4)\t1\n",
+      "  (1, 16)\t1\n",
+      "  (2, 22)\t3\n",
+      "  (2, 12)\t1\n",
+      "  (2, 10)\t1\n",
+      "  (2, 28)\t1\n",
+      "  (2, 7)\t1\n",
+      "  (2, 13)\t1\n",
+      "  (2, 15)\t1\n",
+      "  (3, 8)\t1\n",
+      "  (3, 17)\t1\n",
+      "  (3, 9)\t1\n",
+      "  (3, 0)\t1\n",
+      "  (3, 5)\t1\n",
+      "  (3, 23)\t1\n",
+      "  (3, 1)\t1\n",
+      "  (3, 14)\t1\n",
+      "  (3, 24)\t1\n",
+      "  (3, 20)\t1\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(vectorised_corpus)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vectorised_corpus=vectorised_corpus.toarray()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(vectorised_corpus[0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'indian': 8,\n",
+       " 'cricket': 2,\n",
+       " 'team': 21,\n",
+       " 'will': 26,\n",
+       " 'win': 27,\n",
+       " 'the': 22,\n",
+       " 'world': 29,\n",
+       " 'cup': 3,\n",
+       " 'says': 19,\n",
+       " 'virat': 25,\n",
+       " 'he': 6,\n",
+       " 'lok': 11,\n",
+       " 'sabha': 18,\n",
+       " 'elect': 4,\n",
+       " 'pm': 16,\n",
+       " 'nobel': 12,\n",
+       " 'laureate': 10,\n",
+       " 'won': 28,\n",
+       " 'hearts': 7,\n",
+       " 'of': 13,\n",
+       " 'people': 15,\n",
+       " 'raazi': 17,\n",
+       " 'is': 9,\n",
+       " 'an': 0,\n",
+       " 'exciting': 5,\n",
+       " 'thriller': 23,\n",
+       " 'based': 1,\n",
+       " 'on': 14,\n",
+       " 'true': 24,\n",
+       " 'story': 20}"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cv.vocabulary_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 0, 0, 0, 1, 0, 1, 0, 1, 0, 0, 1, 0, 0, 0, 0, 1, 0, 1, 1, 0, 0,\n",
+       "       0, 0, 0, 0, 1, 1, 0, 0], dtype=int64)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "numbers=vectorised_corpus[1]\n",
+    "numbers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[array(['elect', 'he', 'indian', 'lok', 'pm', 'sabha', 'says', 'will',\n",
+       "        'win'], dtype='<U8')]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cv.inverse_transform(numbers)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
